# TrainSchedule

./: .gitignore  README.md  pubspec.yaml  pyproject.toml
android/app/: build.gradle.kts
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  mock_data.dart
lib/api/: mock_data.dart
lib/l10n/: intl_en.arb  intl_uk.arb
lib/models/: train_result.dart
lib/providers/: settings_provider.dart  theme_provider.dart
lib/screens/: direction_tab.dart  home_screen.dart  schedule_tab.dart  settings_screen.dart  train_number_tab.dart
lib/widgets/: multi_select_train_type_field.dart  station_autocomplete_field.dart  train_result_card.dart
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
src/: main.py
src/app/: config.py
src/app/config/: __init__.py  api_config.py  config.json
src/app/models/: schedule.py  station.py  train.py
src/app/repositories/: schedule_repository.py
src/app/services/: config_service.py  data_adapter.py  filter_service.py  mock_data_service.py  schedule_service.py  search_service.py  settings_service_new.py  uz_api_service.py
src/app/utils/: constants.py  helpers.py
src/app/views/: components.py  main_view.py  route_search_view.py  settings_view.py  station_schedule_view.py  station_view.py  train_number_view.py  train_view.py
storage/data/: user_settings.json
trainshedule/ios/Runner/: Info.plist
trainshedule/linux/: CMakeLists.txt
trainshedule/test/: widget_test.dart
trainshedule/web/: index.html
trainshedule/windows/: CMakeLists.txt
web/: manifest.json
windows/runner/: Runner.rc
(+5 files in other folders)
